--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,7 @@
 .main__a {
     font-size: 16px;
     font-weight: 400;
+    color: var(--color-primario);
 }
 
 .main__a {
@@ -220,6 +221,11 @@
     }
     .main__a {
         font-weight: 600;
+    }
+
+    .main__p-order {
+        font-size: 16px;
+        color: var(--color-primario);
     }
 }
 
@@ -276,15 +282,6 @@
     color: var(--color-primario);
     margin: 5px 0;
 }
-
-/* .puzzle-img {
-    height: 200px;
-    cursor: pointer;
-    transition: filter 0.3s ease;
-    object-fit: cover;
-    object-position: center center;
-    position: relative;
-} */
 
 .puzzle-img.grayscale {
     filter: grayscale(100%);
@@ -363,6 +360,37 @@
     object-position: center center;
     position: relative;
     z-index: 0; /* Ensure the image is behind the pseudo-element */
+}
+
+.input-container {
+    display: flex;
+    align-items: center;
+}
+
+.sort-options {
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.sort-options input[type="radio"] {
+    margin-right: 5px;
+    margin-left: 15px;
+}
+
+@media (max-width: 380px) {
+    .main__p-order {
+        margin-bottom: 15px;
+    }
+
+    .sort-options {
+        flex-direction: column;
+    }
+
+    .input-container {
+        margin-bottom: 10px;
+    }
 }
 
 /* FIN MAIN */
