--- a/css/styles.css
+++ b/css/styles.css
@@ -392,5 +392,31 @@
         margin-bottom: 10px;
     }
 }
-
 /* FIN MAIN */
+
+/* SECTION PANFLETO */
+.section-panfleto {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    padding: 0 20px;
+    text-align: center;
+}
+
+.section-panfleto__img {
+    width: 60%;
+    margin-top: 25px;
+    /* -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75); */
+    /* -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75); */
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75);
+    border-radius: 10px;
+    border: 2px solid #7e7e7e;
+}
+@media (max-width: 1000px) {
+    .section-panfleto__img {
+        width: 90%;
+    }
+}
+/* FIN SECTION PANFLETO */
