--- a/css/styles.css
+++ b/css/styles.css
@@ -420,3 +420,46 @@
     }
 }
 /* FIN SECTION PANFLETO */
+
+/* FOOTER */
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    position: relative;
+    z-index: 10;
+    width: 100%;
+    margin-top: 30px;
+    padding: 0;
+}
+
+.footer__small {
+    font-size: 12px;
+    text-align: center;
+    display: flex;
+}
+
+.footer__a-red {
+    color: rgb(110, 6, 6);
+}
+
+.footer__a-blue {
+    color: rgb(8, 90, 111);
+}
+
+.footer__span {
+    margin-left: 5px;
+}
+@media (max-width: 540px) {
+    .footer {
+        flex-direction: column;
+        gap: 5px;
+        margin-top: 30px;
+    }
+
+    .footer__small-separator {
+        display: none;
+    }
+}
+/* FIN FOOTER */
